Fix(Bug): <pre> tags do not wrap

--- a/assets/css/_common/_partials/post.scss
+++ b/assets/css/_common/_partials/post.scss
@@ -108,6 +108,8 @@
     pre {
       padding: 7px;
       font-size: 13px;
+      white-space: pre-wrap;
+      word-wrap: break-word;
       font-family: 'Fira Code', Consolas, Monaco, Menlo, Consolas, monospace;
       word-break: break-all;
       word-wrap: break-word;
